[package]
name = 'pallet-wyvern-exchange'
version = '2.0.0'
description = 'NFT Dex wyvern exchange'
edition = '2018'
authors = ['vlbos <https://github.com/vlbos>']
homepage = 'https://substrate.dev'
repository = 'https://github.com/vlbos/orderbook/'
license = 'Unlicense'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.timestamp]
default_features = false
package = 'pallet-timestamp'
version = '2.0.0'
[dependencies.sp-std]
default-features = false
version = '2.0.0'
# [dependencies.proxy]
# default-features = false
# # git = 'https://github.com/substrate-developer-hub/pallet-proxy'
# package = 'pallet-proxy'
# version = '2.0.1'
# [dependencies.serde]
# features = ['derive']
# optional = true
# version = '1.0.101'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
balances = { package = 'pallet-balances', version = '2.0.0', default-features = false }
# proxy = { package = 'pallet-proxy', version = '2.0.1', default-features = false }
# pallet-proxy = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
# serde = { version = "1.0.121", default-features = false }
# serde_derive = { version = "1.0.117", optional = true }
# serde = { version = "1.0.106", optional = true }
# serde = "1"
serde = { version = "1.0", default-features = false, features = ['derive'],optional = true }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
# sp-std = {  default-features = false,version = '2.0.0' }

[features]
default = ['std']
std = [
"serde",
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'timestamp/std',
    # 'sp-std/std',
'balances/std',
# 'sp-runtime/std',
]
