[package]
name = "wyvern-exchange-runtime-api"
version = "2.0.0"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies.wyvern-exchange]
default-features = false
package = 'pallet-wyvern-exchange'
path = '..'
version = '2.0.0'

[dependencies]
sp-api = { version = '2.0.0', default-features = false}
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false }
[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
	"sp-api/std",
'sp-std/std',
"wyvern-exchange/std"
]
